# openbook-v2

./: .gitignore  README.md
lib/client/: Cargo.toml  readme.md
lib/client/scripts/: all_markets_deposit.rs
lib/client/src/: client_init.rs  event_heap_reader.rs  get_event_log.rs  get_vault_addresses.rs  get_vault_mint.rs  lib.rs  market_fetch.rs  trade_fetcher.rs  vault_balances.rs
lib/client/src/scripts/: all_logs.rs  all_market_deposits.rs  all_markets.rs  all_markets_data.rs  all_markets_deposit.rs  all_token_mints.rs  all_vault_addresses.rs  fetch_raw_event_heap.rs  trades.rs
