cargo-features = ["workspace-inheritance"]

[package]
edition = "2021"
name = "openbook-v2-client"
version = "0.3.0"

[lib]
doctest = false

[features]
default = ["openbook-v2/client"]
enable-gpl = ["openbook-v2/enable-gpl"]

[dependencies]
anchor-client = {workspace = true}
anchor-lang = {workspace = true}
anchor-spl = {workspace = true}
anyhow = "1.0"
async-channel = "1.6"
async-once-cell = {version = "0.4.2", features = ["unpin"]}
async-trait = "0.1.52"
base64 = "0.13.0"
bincode = "1.3.3"
fixed = {workspace = true, features = ["serde", "borsh"]}
futures = "0.3.25"
itertools = "0.10.3"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = {version = "18.0.0", features = ["ws", "http", "tls"]}
log = "0.4"
env_logger = "0.10"
openbook-v2 = {path = "../../programs/openbook-v2"}
pyth-sdk-solana = {workspace = true}
reqwest = "0.11.11"
serde = "1.0.141"
serde_json = "1.0.82"
shellexpand = "2.1.0"
solana-account-decoder = {workspace = true}
solana-client = {workspace = true}
solana-rpc = {workspace = true}
solana-sdk = {workspace = true}
solana-rpc-client = "1.16.1"
solana-rpc-client-api = "1.16.1"
spl-associated-token-account = {workspace = true}
thiserror = "1.0.31"
tokio = {version = "1", features = ["full"]}
tokio-stream = {version = "0.1.9"}
jupiter-amm-interface = "0.1.1"
solana-transaction-status = "1.17.13"
flexi_logger = "0.22"

[dev-dependencies]
solana-program-test = { workspace = true }

[[bin]]
name = "all_deposits"
path = "src/scripts/all_market_deposits.rs"

[[bin]]
name = "all_vaults"
path = "src/scripts/all_vault_addresses.rs"

[[bin]]
name = "all_markets_data"
path = "src/scripts/all_markets_data.rs"

[[bin]]
name = "all_markets"
path = "src/scripts/all_markets.rs"

[[bin]]
name = "trades"
path = "src/scripts/trades.rs"

[[bin]]
name = "token_mint"
path = "src/scripts/all_token_mints.rs"

[[bin]]
name = "event_heap"
path = "src/scripts/fetch_raw_event_heap.rs"

[[bin]]
name = "all_logs"
path = "src/scripts/all_logs.rs"